# hardcore-lyricist

./: .gitignore  README.md  pyproject.toml
src/hardcore_lyricist/: __init__.py  preprocessing.py
src/hardcore_lyricist/models/: song.py
